--- a/spotify/index.html
+++ b/spotify/index.html
@@ -19,7 +19,7 @@
 <div class="container-fluid">
   <div class="row"> 
       
-    <div class=" col-md-2 text-light"> 
+    <div class="text-light" > 
          <div>
            <nav style="padding-left: 20px;" id="nav1">
              <ul class="d-flex flex-column mx-4 mb-0 px-2" >
@@ -130,10 +130,6 @@
         </div>
       </footer>
     
-
-
-
-
 
 
 
