--- a/spotify/LogIn.html
+++ b/spotify/LogIn.html
@@ -20,7 +20,7 @@
     <hr>
     <div class="container-fluid_login">
       <div class="content_login d-flex text-center justify-content-center flex-column">
-        <p>To continue, loging to Spotify.</p>
+        <p>To continue, log in to Spotify.</p>
         <button type="button" id="bt1" class="btn btn-primary w-100 mb-2"><i class="fa fa-facebook-square" style="font-size:24px; margin-right: 10px;"></i></i>CONTINUE WITH FACEBOOK</button>
         <button type="button" id="bt2" class="btn btn-dark w-100"><i class="fa fa-apple" style="font-size:24px; margin-right: 10px;"></i>CONTINUE WITH APPLE</button>
         <div class="hr_line mb-3">
