updated final version

--- a/album-page/album-page.html
+++ b/album-page/album-page.html
@@ -290,9 +290,9 @@ margin-left: 30%;
 
 <div class="sidebar">
    
-        <a href="/trending-page/Trending.html"><img src="spotify-white-logo-png-3.gif"  ></a>
+        <a href="/spotify/Trending.html"><img src="spotify-white-logo-png-3.gif"  ></a>
       <ol class="up">
-       <li><a href="/trending-page/Trending.html"><i class="fa fa-home pr-2"></i>Home</a></li>
+       <li><a href="/spotify/Trending.html"><i class="fa fa-home pr-2"></i>Home</a></li>
       <li><a href="#"><i class="fa fa-search pr-2"></i>Search</a></li>
        <li><a href="/artist-page/artist-page.html"><i class="fa fa-bookmark pr-2 "></i>Library</a></li>
     
