--- a/artist-page/artist-page.html
+++ b/artist-page/artist-page.html
@@ -37,7 +37,7 @@
         <ul class="list-unstyled row d-flex flex-column">
           <li class="col mb-1">
             <a
-              href="/trending-page/Trending.html"
+              href="/spotify/Trending.html"
               class="text-decoration-none text-light"
             >
               <svg viewBox="0 0 1134 340" class="spotify-logo--text">
@@ -51,7 +51,7 @@
           </li>
           <li class="col mt-3">
             <a
-              href="/trending-page/Trending.html"
+              href="/spotify/Trending.html"
               class="text-decoration-none text-light"
             >
               <svg
