--- a/artist-page/artist-page.html
+++ b/artist-page/artist-page.html
@@ -260,7 +260,7 @@
                   </td>
                   <td class="col-8">
                     <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queenn</span>
+                    <span class="sub-font">Queen</span>
                   </td>
                   <td class="col-1">
                     <i class="fas fa-ellipsis-h"></i>
