--- a/album-page/album-page.html
+++ b/album-page/album-page.html
@@ -293,8 +293,8 @@ margin-left: 30%;
         <a href="/spotify/Trending.html"><img src="spotify-white-logo-png-3.gif"  ></a>
       <ol class="up">
        <li><a href="/spotify/Trending.html"><i class="fa fa-home pr-2"></i>Home</a></li>
-      <li><a href="#"><i class="fa fa-search pr-2"></i>Search</a></li>
-       <li><a href="/artist-page/artist-page.html"><i class="fa fa-bookmark pr-2 "></i>Library</a></li>
+      <li><a href="/artist-page/artist-page.html"><i class="fa fa-search pr-2"></i>Search</a></li>
+       <li><a href="/album-page/album-page.html"><i class="fa fa-bookmark pr-2 "></i>Library</a></li>
     
     </ol>
        <div class="down">
