--- a/album-page/album-page.html
+++ b/album-page/album-page.html
@@ -264,6 +264,15 @@ width: 100%;
 .overlay .fa-play-circle:hover {
   color:red;
   
+.sidebar a:hover{
+  color: white !important;
+ 
+}
+.sidebar .active{
+  color: white !important;
+  font-weight: bolder;
+  font-size: 16px !important;
+  
 }
 @media screen and (max-width: 700px) {
   .sidebar {
