--- a/artist-page/artist-page.html
+++ b/artist-page/artist-page.html
@@ -58,6 +58,7 @@
                 viewBox="0 0 512 512"
                 class="svg-size"
                 xmlns="http://www.w3.org/2000/svg"
+                   id="hoverr"
               >
                 <path
                   d="M 256.274 60.84 L 84.324 166.237 L 84.324 443.063 L 193.27 443.063 L 193.27 293.73 L 320.228 293.73 L 320.228 443.063 L 428.222 443.063 L 428.222 165.476 L 256.274 60.84 Z M 256.274 35.95 L 448.452 149.145 L 448.452 464.395 L 300 464.395 L 300 315.062 L 213.499 315.062 L 213.499 464.395 L 64.095 464.395 L 64.095 150.161 L 256.274 35.95 Z"
@@ -68,7 +69,7 @@
             </a>
           </li>
           <li class="col mt-3">
-            <a href="#" class="text-decoration-none text-light">
+            <a href="#" class="text-decoration-none text-light" id="hoverr">
               <svg
                 viewBox="0 0 512 512"
                 class="svg-size"
@@ -91,7 +92,7 @@
               <svg
                 viewBox="0 0 512 512"
                 xmlns="http://www.w3.org/2000/svg"
-                class="svg-size"
+                class="svg-size" id="hoverr"
               >
                 <path
                   d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z"
@@ -112,7 +113,7 @@
       <div class="container install-app">
         <div class="row">
           <div class="col">
-            <a href="#" class="text-decoration-none text-light">
+            <a href="#" class="text-decoration-none text-light" id="hoverr>
               <i class="fas fa-arrow-circle-down"></i>
               <span class="ml-2 font-size">Install App</span>
             </a>
