--- a/artist-page/artist-page.html
+++ b/artist-page/artist-page.html
@@ -81,7 +81,7 @@
                   fill-rule="evenodd"
                 ></path>
               </svg>
-              <span class="ml-2 font-size">Search</span>
+              <span class="ml-2 font-size active">Search</span>
             </a>
           </li>
           <li class="col mt-3">
