--- a/album-page/album-page.html
+++ b/album-page/album-page.html
@@ -56,7 +56,7 @@ display:block;
 }
 .sidebar a:hover{
 font-weight:bold;
-color:red;
+color:white;
 border-left: green solid 2px ;
 }
 .sidebar a:hover:not(.active) {
@@ -250,6 +250,35 @@ width: 100%;
   opacity: 1;
 }
 
+.icon {
+  color: red;
+  font-size: 200px;
+  position: absolute;
+  top: 21%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay .fa-play-circle:hover {
+  color:red;
+  
+}
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 30%;
+    height: 100%;
+  text-align: left; 
+}
+.content{
+margin-left: 30%;
+}
+#bg{
+    height: 250px;
+}
+
+}
 .sidebar a:hover{
   color: white !important;
  
@@ -277,26 +306,6 @@ width: 100%;
   border-left: 3px solid rgb(8, 211, 8) !important;
   border-bottom: none !important;
 }
-.sidebar .active{
-  color: white !important;
-  font-weight: bolder;
-  font-size: 16px !important;
-  
-}
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 30%;
-    height: 100%;
-  text-align: left; 
-}
-.content{
-margin-left: 30%;
-}
-#bg{
-    height: 250px;
-}
-
-}
 @media screen and (max-width: 1000px){
     .third-section{
     display: none;
@@ -312,7 +321,7 @@ margin-left: 30%;
       <ol class="up">
        <li><a href="/spotify/Trending.html"><i class="fa fa-home pr-2"></i>Home</a></li>
       <li><a href="/artist-page/artist-page.html"><i class="fa fa-search pr-2"></i>Search</a></li>
-       <li><a href="/album-page/album-page.html"><i class="fa fa-bookmark pr-2 "></i>Library</a></li>
+       <li class="active"><a href="/album-page/album-page.html"><i class="fa fa-bookmark pr-2 "></i>Library</a></li>
     
     </ol>
        <div class="down">
