--- a/artist-page/artist-page.html
+++ b/artist-page/artist-page.html
@@ -58,7 +58,7 @@
                 viewBox="0 0 512 512"
                 class="svg-size"
                 xmlns="http://www.w3.org/2000/svg"
-                   id="hoverr"
+                id="hoverr"
               >
                 <path
                   d="M 256.274 60.84 L 84.324 166.237 L 84.324 443.063 L 193.27 443.063 L 193.27 293.73 L 320.228 293.73 L 320.228 443.063 L 428.222 443.063 L 428.222 165.476 L 256.274 60.84 Z M 256.274 35.95 L 448.452 149.145 L 448.452 464.395 L 300 464.395 L 300 315.062 L 213.499 315.062 L 213.499 464.395 L 64.095 464.395 L 64.095 150.161 L 256.274 35.95 Z"
@@ -92,7 +92,8 @@
               <svg
                 viewBox="0 0 512 512"
                 xmlns="http://www.w3.org/2000/svg"
-                class="svg-size" id="hoverr"
+                class="svg-size"
+                id="hoverr"
               >
                 <path
                   d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z"
@@ -113,7 +114,7 @@
       <div class="container install-app">
         <div class="row">
           <div class="col">
-            <a href="#" class="text-decoration-none text-light" id="hoverr>
+            <a href="#" class="text-decoration-none text-light" id="hoverr">
               <i class="fas fa-arrow-circle-down"></i>
               <span class="ml-2 font-size">Install App</span>
             </a>
@@ -150,26 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="row pl-3 pb-3">
-          <div class="col-3">
-            <img
-              src="https://i.scdn.co/image/ab67616d00001e02d92f69c3b3adb389afdde64f"
-              alt=""
-              class="img-fluid"
-            />
-          </div>
-          <div class="col d-flex flex-column justify-content-end text-light">
-            <p>Album</p>
-            <h1>
-              Queen II (Deluxe Edition 2011 <br />
-              Remaster)
-            </h1>
-            <p>
-              <i class="far fa-user-circle"></i> Queen &#183; 1974 &#183; 59 min
-              47 sec
-            </p>
-          </div>
-        </div>
+        <div class="row pl-3 pb-3" id="main-title"></div>
       </section>
       <article class="col-10 float-right right-col">
         <div class="dark text-light">
@@ -189,281 +171,7 @@
           </div>
           <div>
             <table class="w-100">
-              <tbody>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-                <tr class="d-flex justify-content-center song-list">
-                  <td class="align-self-center">
-                    <i class="fas fa-play-circle"></i>
-                  </td>
-                  <td class="col-8">
-                    <div class="head-font">Procession - Remastered 2011</div>
-                    <span class="sub-font">Queen</span>
-                  </td>
-                  <td class="col-1">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </td>
-                  <td class="col-2 footer-hide">1 : 13</td>
-                </tr>
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
         </div>
